@@ -9,6 +9,7 @@
 - Fix Client.destroyResources
 - Client.fetchDescription: Handle errors when fetching/parsing fails
 - Client.setup: catch and report errors
+- Coercion of input parameters
 
 * Thu Mar 03 2016 - version 0.5.2
 - No changes
